functioning calendar without completed read me

--- a/index.html
+++ b/index.html
@@ -32,55 +32,57 @@
       <!-- Timeblocks go here -->
       <div class="row row-cols-3 border">
         <div class="col text-right border">0900</div>
-        <textarea class="form-control col-8" type="text" id="0900" data-hour="09"></textarea>
+        <textarea class="form-control col-8" type="text" id="h-0900" data-hour="09"></textarea>
         <div class="col border d-flex align-items-center justify-content-center save-icon save-container"><i class="fa fa-folder-open"></i></div>
       </div>
       <div class="row row-cols-3 border">
         <div class="col text-right border">1000</div>
-        <textarea class="form-control col-8" type="text" id="1000" data-hour="10"></textarea>
+        <textarea class="form-control col-8" type="text" id="h-1000" data-hour="10"></textarea>
         <div class="col border d-flex align-items-center justify-content-center save-icon save-container"><i class="fa fa-folder-open"></i></div>
       </div>
       <div class="row row-cols-3 border">
         <div class="col text-right border">1100</div>
-        <textarea class="form-control col-8" type="text" id="1100" data-hour="11"></textarea>
+        <textarea class="form-control col-8" type="text" id="h-1100" data-hour="11"></textarea>
         <div class="col border d-flex align-items-center justify-content-center save-icon save-container"><i class="fa fa-folder-open"></i></div>
       </div>
       <div class="row row-cols-3 border">
         <div class="col text-right border">1200</div>
-        <textarea class="form-control col-8" type="text" id="1200" data-hour="12"></textarea>
+        <textarea class="form-control col-8" type="text" id="h-1200" data-hour="12"></textarea>
         <div class="col border d-flex align-items-center justify-content-center save-icon save-container"><i class="fa fa-folder-open"></i></div>
       </div>
       <div class="row row-cols-3 border">
         <div class="col text-right border">1300</div>
-        <textarea class="form-control col-8" type="text" id="1300" data-hour="13"></textarea>
+        <textarea class="form-control col-8" type="text" id="h-1300" data-hour="13"></textarea>
         <div class="col border d-flex align-items-center justify-content-center save-icon save-container"><i class="fa fa-folder-open"></i></div>
       </div>
       <div class="row row-cols-3 border">
         <div class="col text-right border">1400</div>
-        <textarea class="form-control col-8" type="text" id="1400" data-hour="14"></textarea>
+        <textarea class="form-control col-8" type="text" id="h-1400" data-hour="14"></textarea>
         <div class="col border d-flex align-items-center justify-content-center save-icon save-container"><i class="fa fa-folder-open"></i></div>
       </div>
       <div class="row row-cols-3 border">
         <div class="col text-right border">1500</div>
-        <textarea class="form-control col-8" type="text" id="1500" data-hour="15"></textarea>
+        <textarea class="form-control col-8" type="text" id="h-1500" data-hour="15"></textarea>
         <div class="col border d-flex align-items-center justify-content-center save-icon save-container"><i class="fa fa-folder-open"></i></div>
       </div>
       <div class="row row-cols-3 border">
         <div class="col text-right border">1600</div>
-        <textarea class="form-control col-8" type="text" id="1600" data-hour="16"></textarea>
+        <textarea class="form-control col-8" type="text" id="h-1600" data-hour="16"></textarea>
         <div class="col border d-flex align-items-center justify-content-center save-icon save-container"><i class="fa fa-folder-open"></i></div>
       </div>
       <div class="row row-cols-3 border">
         <div class="col text-right border">1700</div>
-        <textarea class="form-control col-8" type="text" id="1700" data-hour="17"></textarea>
+        <textarea class="form-control col-8" type="text" id="h-1700" data-hour="17"></textarea>
         <div class="col border d-flex align-items-center justify-content-center save-icon save-container"><i class="fa fa-folder-open"></i></div>
       </div>
     </div>
 
-    <script>console.log(moment());</script> 
-
+    
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
-</html>
+  </html>
+  
+  console.log(moment.version)
